# web-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: app_config.yaml  log_config.yaml  webs.txt
resources/: list_webs.json
src/: api.py  main_app.py  server.py
src/api/: app_api.py
src/api/core/: config.py  event_handlers.py  exception.py  log_management.py
src/api/handlers/: distribuited_monitoring.py
src/api/model/: heartbeat_response.py  monitoring_payload.py  monitoring_response.py  output_render_payload.py  output_render_response.py
src/api/router/: heartbeat.py  monitoring.py  output_render.py  router.py
src/core/: crawler.py
src/log_manager/: config.py  log_management.py
src/utils/: response_log.py  utils.py
src/web_monitor/: crawler.py
test/: test_crawler.py
test/api/: call_api_monitoring.py  test_app_api.py
test/api/handlers/: test_event_handlers.py
test/api/model/: test_monitoring_payload.py
test/api/router/: test_heartbeat.py
test/log_manager/: test_config.py  test_log_management.py
